force-app/main/default/objects/Coupons__c/fields/Flat_Discount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount__c</fullName>
    <label>Flat Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>