force-app/main/default/objects/Coupons__c/fields/Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Quantity__c</fullName>
    <inlineHelpText>Total no of discount coupons availble</inlineHelpText>
    <label>Remaining Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>