force-app/main/default/objects/Coupons__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of discount</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>