force-app/main/default/objects/Coupons__c/validationRules/ExpiryDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpiryDateValidation</fullName>
    <active>true</active>
    <description>Expiry Date should always be greater than today while creating the record</description>
    <errorConditionFormula>Expiry_Date__c &lt; TODAY()&amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>Expiry_Date__c</errorDisplayField>
    <errorMessage>Expiry Date should always be greater than today while creating the record</errorMessage>
</ValidationRule>