force-app/main/default/objects/Coupons__c/validationRules/Required_if_type_if_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_if_type_if_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(Type__c , &apos;Percentage&apos; )  ,  NOT(ISBLANK( Discount__c )) , Null)</errorConditionFormula>
    <errorMessage>Required if type is Percentage</errorMessage>
</ValidationRule>