force-app/main/default/objects/Coupons__c/validationRules/Required_if_type_is_Flat.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_if_type_is_Flat</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(Type__c , &apos;Flat&apos; )  ,  NOT(ISBLANK(Flat_Discount__c )) , Null)</errorConditionFormula>
    <errorMessage>Required if type is Flat</errorMessage>
</ValidationRule>